Front page finished

--- a/views/shopIndex.ejs
+++ b/views/shopIndex.ejs
@@ -25,7 +25,32 @@
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+        <%- include("../public/images/burger-menu.svg")%>
+        
+        <div class="mobile-scale-menu">
+            <%- include("../public/images/close-x.svg")%>
+            <ul role="list" class="header-list-mobile">
+                <li><a href="#">Log In</a></li>
+                <li><a href="#">Sign Up</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
     </header>
+    <div class="services">
+        <div class="services-div">
+            <%- include("../public/images/free-shipping.svg")%>
+            <p>Free Shipping</p>
+        </div>
+        <div class="services-div">
+            <%- include("../public/images/quick-delivery.svg")%>
+            <p>14 Days Delivery</p>
+        </div>
+        <div class="services-div">
+            <%- include("../public/images/returns.svg")%>
+            <p>30 Days Returns</p>
+        </div>
+    </div>
     <nav class="select-gender main-font">
         <ul role="list" class="gender-list">
             <li><button class="gender-option" value="1"><p>Women </p><%- include("../public/images/arrow-menu.svg")%></button></li>
@@ -35,6 +60,7 @@
             <li><button class="gender-option" value="5"><p>Unisex </p><%- include("../public/images/arrow-menu.svg")%></button></li>
         </ul>
     </nav>
+    
     <nav class="big-filter">
         <div class="filter-selection women-selection">
             
@@ -150,7 +176,7 @@
                     </ul>
                 </div>
                 <div class="section-image">
-                    <img src="images/Obrázok1.png" alt="">
+                    <img src="images/girl-streetwear-image.png" alt="">
                 </div>
         </div>
         <div class="filter-selection boys-selection">
@@ -228,19 +254,142 @@
         <h2><i>Explore Your Style</i></h2>
         <div class="main-text-addition"></div>
 
-        
+        <div class="corousel-container">
+            
+            <div class="corousel-img">
+                <img class="fade" src="images/corousel1.png" alt="">
+                <a href="#" class="explore-btn">Explore</a>
+            </div>
+            <div class="corousel-img fade">
+                <img class="fade"  src="images/corousel2.png" alt="">
+                <a href="#" class="explore-btn">Explore</a>
+            </div>
+            <div class="corousel-img fade">
+                <img class="fade"  src="images/corousel3.png" alt="">
+                <a href="#" class="explore-btn">Explore</a>
+            </div>
+            <div class="corousel-img fade">
+                <img class="fade"  src="images/corousel4.png" alt="">
+                <a href="#" class="explore-btn">Explore</a>
+            </div>
+            <button class="corousel-button prev" onclick="plusDivs(-1)"><%- include("../public/images/arrow-menu.svg")%></button>
+            <button class="corousel-button next" onclick="plusDivs(1)"><%- include("../public/images/arrow-menu.svg")%></button>
+        </div>
     </main>
+    <section class="see-more">
+        <div class="see-more-div">
+            <a href="#" class="btn-collection-new">See more</a>
+            <div class="black-line"></div>
+            <h3 class="new-coll">New Collection</h3>
+            
+        </div>
+        <img src="images/image-under-corousel.png" alt="">
+        <div class="floor"></div>
+        <footer class="animate">
+            <h3 class="home-logo-footer"><i>DAY-HYPE</i></h3>
+            <ul role="list" class="footer-ul list1">
+                <li><a href="">Log In</a></li>
+                <li><a href="">Create Account</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">About us</a></li>
+                <li><a href="">Services</a></li>
+            </ul>
+            <ul role="list" class="footer-ul list2">
+                <li><a href="">Men</a></li>
+                <li><a href="">Women</a></li>
+                <li><a href="">Girls</a></li>
+                <li><a href="">Boys</a></li>
+                <li><a href="">Unisex</a></li>
+                <li><a href="">New Collection</a></li>
+            </ul>
+            <div class="last-div-footer">
+                <ul role="list" data-type="media-icons" class="social-media">
+                    <li><a href="#"><img src="images/facebook.svg"></a></li>
+                    <li><a href="#"><img src="images/instagram.svg"></a></li>
+                    <li><a href="#"><img src="images/tiktok.svg"></a></li>
+                    <li><a href="#"><img src="images/twitch.svg"></a></li>
+                    <li><a href="#"><img src="images/twitter.svg"></a></li>
+                </ul>
+
+                <p>Copyright © by Erik Gažovič, 2025</p>
+
+            </div>
+            
+            
+        </footer>
+    </section>
+
 </body>
+
+
 <script>
+    document.addEventListener("DOMContentLoaded", () => {
+
+	const observer = new IntersectionObserver(entries => {
+	  entries.forEach(entry => {
+		if (entry.isIntersecting) {
+		  document.querySelector(".black-line").classList.add('in-view');
+          document.querySelector(".new-coll").classList.add('in-view');
+		  return;
+		}
+		document.querySelector(".black-line").classList.remove('in-view');
+        document.querySelector(".new-coll").classList.remove('in-view');
+	  });
+	});
+
+	const allAnimatedElements = document.querySelectorAll('.animate');
+	allAnimatedElements.forEach((element) => observer.observe(element));
+
+}); 
 
     const genderOptions = document.querySelectorAll(".gender-option");
     const allFilters = document.querySelectorAll(".filter-selection");
     const filterContents = document.querySelectorAll(".content");
 
+    var xMenu800 = window.matchMedia("(max-width: 800px)");
+    var xMenu600 = window.matchMedia("(max-width: 600px)");
+
+    function changeMargin(x, element) {
+        if (x.matches) {
+            element.firstElementChild.style.marginLeft = "25px";
+        } else {
+            element.firstElementChild.style.marginLeft = "40px";
+        }
+    }
+
+    function removeArrows(x, element) {
+        if (x.matches) {
+            return true;
+        }  
+    }
+
+    xMenu800.addEventListener("change", function () {
+                changeMargin(xMenu800);
+    });
+
+    xMenu600.addEventListener("change", function () {
+                removeArrows(xMenu600);
+    });
+
+
+    document.querySelector(".btn-collection-new").addEventListener("mouseover", function () {
+        document.querySelector(".see-more").style.setProperty("--afterDuration", "0.3s");
+        document.querySelector(".see-more").style.setProperty("--afterWidth", "100%");
+    });
+
+    document.querySelector(".btn-collection-new").addEventListener("mouseout", function () {
+        document.querySelector(".see-more").style.setProperty("--afterWidth", "0%");
+    });
+
+
+
+
+
     for (var i = 0; i < genderOptions.length; i++) {
 
         genderOptions[i].addEventListener("mouseover", function () {
-            this.firstElementChild.style.marginLeft = "40px";
+
+            changeMargin(xMenu800, this);
             this.style.backgroundColor = "lightgrey";
             if (this.lastElementChild.classList.contains('hide-arrow')) {
                 this.lastElementChild.classList.remove('hide-arrow');
@@ -252,26 +401,65 @@
         genderOptions[i].addEventListener("mouseout", function () {
             
             if (this.lastElementChild.classList.contains('open-arrow')) {
-
+                
             } else {
                 this.firstElementChild.style.marginLeft = "0px";
                 this.lastElementChild.classList.remove('show-arrow');
-                this.style.backgroundColor = "snow";
+                this.style.backgroundColor = "aliceblue";
             }
 
         })
 
         genderOptions[i].addEventListener("click", function () {
-            for (let genderOption of genderOptions) {
+            if (removeArrows(xMenu600)) {
+                for (let genderOption of genderOptions) {
+                genderOption.style.setProperty("--afterWidth", "0px");
+                genderOption.style.color = "black";
+            }
+            
+                this.style.setProperty("--afterWidth", "100%");
+                this.style.color = "var(--main-color)";
+                this.firstElementChild.style.marginLeft = "0px";
+                this.lastElementChild.style.display = "none";
+                this.style.backgroundColor = "lightgrey";
+            
+            
+                let genderValue = this.value;
+                let showFilterTo = genderChoice(this.value);
+            
+            
+
+                if (!showFilterTo.classList.contains('opened')) {
+                    showFilterTo.classList.add('opened');
+
+                    for (var i = 0; i < allFilters.length; i++) {
+                    
+                        if (allFilters[i] === showFilterTo) {
+                            continue;
+                        }
+                    
+                        allFilters[i].classList.remove('opened');
+                        genderOptions[i].style.backgroundColor = "aliceblue";
+                    }
+                } else { 
+                    this.style.setProperty("--afterWidth", "0px");
+                    this.style.color = "black";
+                    this.style.backgroundColor = "aliceblue";
+                    showFilterTo.classList.remove('opened');
+                }     
+            }
+             else {
+                for (let genderOption of genderOptions) {
                 genderOption.style.setProperty("--afterWidth", "0px");
                 genderOption.style.color = "black";
             }
             
             this.style.setProperty("--afterWidth", "100%");
             this.style.color = "var(--main-color)";
+            changeMargin(xMenu800, this);
+            this.lastElementChild.classList.add("open-arrow");
             this.style.backgroundColor = "lightgrey";
-            this.firstElementChild.style.marginLeft = "40px";
-            this.lastElementChild.classList.add('open-arrow');
+            
             
             let genderValue = this.value;
             let showFilterTo = genderChoice(this.value);
@@ -291,25 +479,19 @@
                     genderOptions[i].lastElementChild.classList.remove('open-arrow');
                     genderOptions[i].lastElementChild.classList.add('hide-arrow');
                     genderOptions[i].firstElementChild.style.marginLeft = "0px";
-                    genderOptions[i].style.backgroundColor = "snow";
+                    genderOptions[i].style.backgroundColor = "aliceblue";
                 }
             } else  {
                 this.lastElementChild.classList.remove("open-arrow");
                 this.style.setProperty("--afterWidth", "0px");
                 this.style.color = "black";
-                this.style.backgroundColor = "snow";
+                this.style.backgroundColor = "aliceblue";
                 showFilterTo.classList.remove('opened');
+            }     
             }
-            
-            
-            
-            
+
             
         })
-
-
-
-        
     }
 
 
@@ -324,5 +506,58 @@
         this.scrollY > 100 ? mainHeader.style.boxShadow = "0px 0px 15px 2px rgba(0, 0, 0);" : "none";
     }
         window.addEventListener("scroll", changeCss , false);
+
+    const burgerMenu = document.querySelector(".burger-menu");
+    const xButton = document.querySelector(".close-x");
+    const mobileMenu = document.querySelector(".mobile-scale-menu");
+
+    burgerMenu.addEventListener("click", function () {
+        this.style.display = "none";
+        mobileMenu.style.width = "170px";
+        mobileMenu.style.borderLeft = "2px solid gray";
+    })
+
+    xButton.addEventListener("click", function () {
+        mobileMenu.style.width = "0px";
+        mobileMenu.style.borderLeft = "none";
+        burgerMenu.style.display = "block";
+    });
+
+
+    function myFunction(x) {
+            if (x.matches) {
+                burgerMenu.style.display = "block";
+            } else {
+                burgerMenu.style.display = "none";
+                mobileMenu.style.width = "0px";
+                mobileMenu.style.borderLeft = "none";
+            }
+        }
+
+
+        var x = window.matchMedia("(max-width: 500px)");
+
+        x.addEventListener("change", function() {
+            myFunction(x);
+        });
+
+
+        var slideIndex = 1;
+        showDivs(slideIndex);
+
+        function plusDivs(n) {
+          showDivs(slideIndex += n);
+        }
+
+        function showDivs(n) {
+          var i;
+          var x = document.querySelectorAll(".corousel-img");
+          if (n > x.length) {slideIndex = 1}
+          if (n < 1) {slideIndex = x.length} ;
+          for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+          }
+          x[slideIndex-1].style.display = "block";
+        }
 </script>
 </html>
