--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,8 @@
 
     --fw-600: 600;
     --fw-900: 900;
+
+    --main-page-marginT: 6vw;
 }
 
 /* Box sizing rules */
@@ -53,6 +55,7 @@ html {
 }
 
 /* Set core body defaults */
+
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
@@ -86,7 +89,8 @@ a {
 }
 
 body {
-    background-color: snow;
+    background-color: rgba(243,243,243);
+    position: relative;
 }
 
 .main-header {
@@ -117,6 +121,7 @@ body {
     min-height: 5rem;
     align-items: center;
     font-weight: var(--fw-600);
+    width: fit-content;
 }
 
 .header-list li{
@@ -129,22 +134,98 @@ body {
     cursor: pointer;
 }
 
-@media (max-width: 700px) {
-  .header-list li{
-    width: 70px;
-    font-size: 0.8rem;
-  }
-
-  .home-logo a {
-    font-size: 1.5rem;
-  }
+.burger-menu {
+  width: 50px;
+  height: 50px;
+  stroke: var(--second-main-color);
+  stroke-width: 2px;
+  position: absolute;
+  right: 30px;
+  cursor: pointer;
+  border: 0px solid transparent;
+  border-radius: 50%;
+  padding: 6px;
+  display: none;
 }
+
+.burger-menu:hover {
+  background-color: rgb(118, 13, 194);
+}
+
+.mobile-scale-menu {
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 0px;
+  background-color: snow;
+  transition-duration: 0.2s;
+  overflow-x: hidden;
+  transition-property: all;
+  z-index: 5;
+}
+
+.header-list-mobile {
+  margin-top: calc(5rem - 2.5px);
+  border-top: 1px solid black;
+
+}
+
+.header-list-mobile li:first-child {
+  margin-top: 20px;
+}
+
+.header-list-mobile li {
+  margin-bottom: 20px;
+  font-weight: var(--fw-600);
+  font-size: 1.2rem;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+.header-list-mobile li:active {
+  background-color: rgb(118, 13, 194);
+}
+
+.header-list-mobile a {
+  width: 100%;
+  height: 100%;
+  padding: 0 15px;
+  display: flex;
+  align-items: center;
+}
+
+.header-list-mobile a:active {
+  color: white;
+}
+
+.close-x {
+  width: 50px;
+  height: 50px;
+  stroke: var(--main-color);
+  stroke-width: 1px;
+  cursor: pointer;
+  border: 0px solid transparent;
+  border-radius: 50%;
+  padding: 6px;
+  position: absolute;
+  right: 30px;
+  top: 15px;
+  
+}
+
+.close-x:hover {
+  background-color: rgb(210, 205, 205);
+}
+
 
 .header-list a {
   color: var(--second-main-color);
 }
-
-
 
 .header-list li:hover{
   background-color: var(--second-main-color);
@@ -156,6 +237,65 @@ body {
 
 .main-font {
     font-family: var(--main-font);
+}
+
+.services {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 2.5rem;
+  width: 100%;
+  background-color: var(--second-main-color);
+  padding: 0 4vw;
+}
+
+
+
+.services-svg path {
+  fill: var(--main-color);
+}
+
+.services-div {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  width: fit-content;
+}
+
+.services-svg {
+  height: 32px;
+}
+
+.services-div p {
+  color: var(--main-color);
+  font-family: var(--main-font);
+  font-size: clamp(0.7rem, 0.2rem + 1.5vw, 1.2rem);
+  font-weight: var(--fw-600);
+  white-space: nowrap;
+  overflow: hidden;
+
+}
+
+@media (max-width: 700px) {
+  .header-list li{
+    width: 70px;
+    font-size: 0.8rem;
+  }
+
+  .home-logo a {
+    font-size: 1.5rem;
+  }
+
+  .services-div {
+    display: flex;
+    gap: 4px;
+    align-items: center;
+    width: fit-content;
+  }
+
+  .services-svg {
+    height: 22px;
+  }
 }
 
 .select-gender {
@@ -202,6 +342,39 @@ body {
   transition-duration: 0.4s;
 }
 
+@media (max-width: 800px) {
+  .arrow-menu {
+    width: 15px;
+    height: 17px;
+    margin-left: 10px;
+  }
+
+  .gender-option {
+    font-size: 0.8rem;
+  }
+  
+}
+
+@media (max-width: 500px) {
+  .header-list {
+    display: none;
+  }
+
+  .home-logo a {
+    font-size: 1.8rem;
+  }
+
+  .main-header {
+    justify-content: center;
+  }
+
+  .burger-menu {
+    display: block;
+  }
+
+
+}
+
 .show-arrow {
   display: inline;
 }
@@ -240,6 +413,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  z-index: 4;
 }
 
 .content h5 {
@@ -274,12 +448,18 @@ body {
 	transition-duration: 0.1s;
   position: absolute;
   max-height: 0px;
-  z-index: 2;
+  z-index: 3;
   
 }
 
 .section-image {
   max-width: 300px;
+}
+
+@media (max-width: 650px) {
+  .section-image {
+    display: none;
+  }
 }
 
 .opened {
@@ -304,20 +484,20 @@ body {
 
 h1 {
   font-family: var(--main-font);
-  font-size: 6rem;
+  font-size: clamp(3.4rem, 0.5rem + 10vw, 6rem);
   font-weight: var(--fw-900);
   text-align: center;
   color: var(--second-main-color);
   letter-spacing: 2px;
   background-color: var(--main-color);
   text-shadow: -10px 6px 1px rgb(0, 0, 0);
-  margin-top: 30px;
+  margin-top: var(--main-page-marginT);
   cursor: default;
 }
 
 h2 {
   font-family: var(--main-font);
-  font-size: 2rem;
+  font-size: clamp(1.3rem, 0.2rem + 3vw, 2rem);
   font-weight: var(--fw-900);
   text-align: center;
   color: var(--main-color);
@@ -328,10 +508,388 @@ h2 {
 
 .main-text-addition {
   width: 100%;
-  height: 15px;
+  height: 25px;
   background-color: var(--main-color);
 }
 
+.corousel-container {
+  margin-top: var(--main-page-marginT);
+  background-color: black;
+  display: flex;
+  overflow-x: hidden;
+  align-items: center;
+  box-shadow: 0px 1px 10px 0.5px black;
+  position: relative;
+}
+
+
+.corousel-img {
+  width: 80%;
+  height: 27vw;
+  margin-inline: auto;
+  position: relative;
+}
+
+.corousel-img img {
+  width: 100%;
+  height: 27vw;
+}
+
+@media (max-width: 600px) {
+  .corousel-img {
+  height: 35vw;
+}
+
+.corousel-img img {
+  height: 35vw;
+}
+} 
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+.corousel-button {
+  position: absolute;
+  height: 6vw;
+  width: 5vw;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px 0px 0px 4px;
+}
+
+.corousel-button:hover {
+  background-color: rgb(67, 67, 67);
+}
+
+ .corousel-button svg {
+  display: block;
+  height: 5vw;
+  width: 3vw;
+  stroke: aliceblue;
+  margin-inline: auto;
+ }
+
+.prev {
+  rotate: 180deg;
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+.explore-btn {
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  background-color:  var(--second-main-color);
+  font-size: clamp(0.8rem, 0.2rem + 2vw, 1.6rem);
+  padding: 4px 20px;
+  font-family: var(--main-font);
+  font-weight: var(--fw-900);
+  border-radius: 2px;
+  box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.703);
+  letter-spacing: 1.2px;
+}
+
+.explore-btn:hover {
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.845);
+}
+
+.see-more {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  gap: 5vw;
+  background-color: rgba(243,243,243);
+  z-index: -2;
+  margin-top: var(--main-page-marginT);
+}
+
+.black-line {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform:  translate(0%, -42%);
+  background-color: black;
+  width: 0px;
+  height: 110px;
+  display: none;
+  transition-duration: 1s;
+}
+
+.black-line.in-view {
+  width: 100%;
+}
+
+.see-more::after {
+  position: absolute;
+  content: "";
+  background-color: black;
+  left: 0;
+  top: 50%;
+  transform:  translate(0%, -40%);
+  width: var(--afterWidth, 0px);
+  height: 8vw;
+  display: block;
+  transition-duration: var(--afterDuration);
+  z-index: 2;
+}
+
+.see-more-div {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  gap: 4vw;
+}
+
+
+
+.new-coll {
+  color: var(--main-color);
+  font-family: var(--main-font);
+  font-weight: 800;
+  font-size: clamp(1.8rem, 0.2rem + 4vw, 3.5rem);
+  letter-spacing: 3px;
+  text-shadow: -4px 3px 3px rgb(0, 0, 0, 0.5);
+  transition-duration: 0.2s;
+  z-index: 3;
+  cursor: default;
+}
+
+@media (max-width: 550px) {
+  .new-coll.in-view {
+    color: var(--second-main-color);
+    text-shadow: -5px 4px 3px rgb(0, 0, 0, 0.8);
+  }
+
+
+  .black-line {
+    display: block;
+  }
+}
+
+
+
+.btn-collection-new {
+  background-color: var(--main-color);
+  color: whitesmoke;
+  font-size: clamp(1rem, 0.2rem + 2vw, 1.6rem);
+  font-family: var(--main-font);
+  padding: 2px 10px;
+  border-radius: 2px;
+  letter-spacing: 2px;
+  box-shadow: 0px 2px 10px 0.5px rgb(0, 0, 0, 0.55);
+  cursor: pointer;
+  z-index: 3;
+ 
+}
+
+.btn-collection-new:hover ~ .new-coll {
+  color: var(--second-main-color);
+  text-shadow: -5px 4px 3px rgb(0, 0, 0, 0.8);
+}
+
+
+.see-more img {
+  height: 35vw;
+  box-shadow: none;
+  z-index: 3;
+  position: relative;
+}
+
+
+
+.floor {
+  background-color: rgb(248, 248, 248);
+  height: 6vw;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+
+
+footer {
+  height: fit-content;
+  background-color: var(--main-color);
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  transform: translate(0%, 100%);
+  display: flex;
+  justify-content: center;
+  gap: 2vw;
+  padding: 20px 4vw;
+}
+
+
+.home-logo-footer {
+    color: var(--second-main-color);
+    letter-spacing: 2px;
+    font-family: var(--main-font);
+    font-size: clamp(1.2rem, 0.2rem + 3vw, 2rem);
+    font-weight: var(--fw-900);
+    text-shadow: -5px 4px 1px black;
+    cursor: default;
+    border-right: 1px solid var(--second-main-color);
+    padding-right: 2vw;
+    white-space: nowrap;
+    grid-area: area1;
+}
+
+.footer-ul {
+  width: 100%;
+  max-width: 280px;
+  border-right: 1px solid var(--second-main-color);
+  
+}
+
+.list1 {
+  grid-area: area2;
+}
+
+.list2 {
+  grid-area: area4;
+}
+
+.footer-ul li {
+  margin-top: 5px;
+}
+
+
+.footer-ul a {
+  color: var(--second-main-color);
+}
+
+footer p {
+  font-size: clamp(0.6rem, 0.1rem + 1.5vw, 1rem);
+  color: var(--second-main-color);
+  white-space: nowrap;
+}
+
+.last-div-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  grid-area: area3;
+}
+
+.social-media {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-media img {
+  max-width: 25px;
+  max-height: 25px;
+}
+
+@media (max-width: 830px) {
+  .social-media img {
+    max-width: 19px;
+    max-height: 19px;
+    
+  }
+
+
+  .footer-ul a {
+    color: var(--second-main-color);
+    font-size: 0.7rem;
+  }
+
+}
+
+@media (max-width: 630px) {
+  .social-media img {
+    max-width: 15px;
+    max-height: 15px;
+  }
+
+  .footer-ul {
+    border-left: 1px solid var(--second-main-color);
+  }
+
+  .footer-ul a {
+    color: var(--second-main-color);
+    font-size: 0.7rem;
+    padding-left: 15px;
+  }
+
+  .list1 {
+    border-right: none;
+  }
+
+  .home-logo-footer {
+    border-right: none;
+  }
+
+  footer {
+    display: grid;
+    grid-template-areas: "area1 area2 area4"
+                          "area3 area2 area4";
+    grid-template-columns: 1fr 2fr 2fr;
+  }
+
+}
+
+@media (max-width: 550px) {
+  .see-more {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .see-more-div {
+    margin-top: -120px;
+    gap: 70px;
+  }
+
+  .new-coll {
+    font-size: 2.2rem;
+  }
+
+  .btn-collection-new {
+    z-index: 5;
+    font-size: 1.2rem;
+  }
+
+  .see-more img {
+    height: 300px;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, 0%);
+  }
+
+  .social-media {
+    justify-content: center;
+    gap: 4vw;
+  }
+
+  .social-media img {
+    position: relative;
+  }
+
+  .floor {
+    height: 52px;
+  }
+
+  .see-more {
+    height: 300px;
+  }
+}
 
 
 
